--- a/src/component/Card.css
+++ b/src/component/Card.css
@@ -61,7 +61,9 @@
     
 }
 .ownCard .info > * {
-    padding:3px;
+    line-height: 15px;
+    vertical-align: top;
+    padding:0 3px;
     font-size: 11px;
     display: inline-block;
     color: #333333;
