--- a/src/component/CardMenuModal.css
+++ b/src/component/CardMenuModal.css
@@ -1,14 +1,21 @@
 
-.card-modal{
+.card-menu-modal{
     width: 100vw;
     height: 100vh;
     overflow: none;
     border: none;
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(0,0,0,0.4);
 }
-
-.card-modal .c-modal-content .action{
-    width: 147px;
+.card-menu-modal .s-close {
+    font-size: 40px;
+    padding: 10px;
+    color: #aaaaaa;
+    font-weight: 900;
+    line-height: 40px;
+    cursor: pointer;
+}
+.card-menu-modal .c-modal-content .action{
+    width: 170px;
     top: 25px;
     position: relative;
 }
@@ -18,12 +25,12 @@
     text-decoration: none;
     font-size: 13px;
     padding: 3px 10px;
-    display: inline-block;
+    display: block;
     margin: 4px;
     border: none;
 }
 .c-modal-content .action .link:hover{
-    margin: 4px 8px;
+    margin: 4px 7px;
 }
 .c-modal-content .edit-card{
     position: relative;
@@ -33,4 +40,14 @@
     width: 100%;
     border: none;
     background-color: white;
+    padding: 5px;
+    font-size: 14px;
+}
+.c-modal-content .edit-card .btn {    
+    background-color: #5aac44;
+    font-size: 14px;
+
+}
+.c-modal-content .edit-card .btn:hover {
+    background-color: #61bd4f;
 }
