--- a/src/component/NavOne.css
+++ b/src/component/NavOne.css
@@ -40,7 +40,7 @@
   }  
 }
 .nav1{
-    background-color: rgba(0,0,0, 0.2);
+    background-color: rgba(0,0,0, 0.3);
     padding: 3px;
 }
 
@@ -61,14 +61,14 @@
     display: inline-block;
     border-radius: 3px;
     color: var(--link-color);
-    background-color: var(--links);
+    background-color: rgba(250,250,250, 0.2);
     font-size: 15px;
     font-weight: 800;
     border: none;
 }
 .nav-flex .link:hover{
     color: var(--list);
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 
@@ -78,9 +78,10 @@
 #search{
     padding:0;
     background-color:transparent;
+    outline: none;
 }
 #search > *{
-    background-color: var(--links);    
+    background-color: rgba(250,250,250, 0.2);    
     margin: 0;
 }
 #search  input{
@@ -100,7 +101,7 @@
     cursor: pointer;
 }
 #search:hover > * {
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.3);
 }
 #search .showOnFocus{
     display: none ;
@@ -127,7 +128,7 @@
     font-family: 'Pacifico', cursive;
     font-size: 24px;
     line-height: 30px;
-    color: var(--logo);
+    color:#dddddd;
     text-decoration: none;
 }
 
