--- a/src/index.css
+++ b/src/index.css
@@ -9,14 +9,14 @@
 
 }
 * {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
   transition: all 200ms ease-in-out;
 }
 
 a {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .avatar {
