--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   height: 100vh;
-  background-image: url(./assets/background.jpg);
+  background-image: url(./assets/unsplash-01.jpg);
   background-position: center;
   background-size: cover;
   min-height: 100vh;
