--- a/src/component/CardModal.css
+++ b/src/component/CardModal.css
@@ -1,5 +1,5 @@
 .card-modal {
-    display: none; 
+    display:block;
     position: fixed; 
     z-index: 1; 
     padding-top: 50px; 
@@ -47,6 +47,8 @@
       font-size: 20px;
       font-weight: 700;
       color:#333333;
+      height: 33px;
+      line-height: 33px;
       display: inline-block;
   }
 
