--- a/src/component/AddList.css
+++ b/src/component/AddList.css
@@ -22,7 +22,7 @@
     font-size: 13px;
 }
 .content-wrapper .list-fill {
-    display: none;
+    display: block;
     width: 98%;
     margin: 0 auto;
 }
