--- a/src/component/Aside.css
+++ b/src/component/Aside.css
@@ -12,13 +12,14 @@
     padding: 8px 10px;
     border-radius: 5px;
     margin: 5px 15px;
+    font-size: 15px;
 }
 
 .card-modal .s-modal-content .aside h5{
     padding-left: 16px;
     margin-top: 20px;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 400;
     color:var(--nav1);
 }
@@ -26,9 +27,8 @@
     display: block;    
     height:1.5px;
     border: none;
-    background-color: var(--list);
+    background-color: #555555;
     margin: 0 15px;
-    width: 165px;
 }
 .card-modal .s-modal-content .aside a:hover{
     background-color: #e1e4e4;
