--- a/src/component/Card.css
+++ b/src/component/Card.css
@@ -52,21 +52,34 @@
 .ownCard h4{
     line-height: 25px;
     margin: 0 8px;
-    font-size: 14px;
+    font-size: 13px;
     color:#333333;
 }
 .ownCard .info{
     width: 95%;
     margin:0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     
 }
 .ownCard .info > * {
-    line-height: 15px;
-    vertical-align: top;
+    line-height: 20px;
     padding:0 3px;
     font-size: 11px;
-    display: inline-block;
     color: #333333;
+}
+.ownCard .info .member {
+    display: flex;
+}
+.ownCard .info .avatar {
+    line-height: 28px;
+    text-align: center;
+    background-color: #D9DCE2;
+    width: 28px;
+    height: 28px;
+    margin-bottom: 3px;
+    margin-left: 3px;
 }
 .ownCard .save{
     display: none;
