--- a/src/component/List.css
+++ b/src/component/List.css
@@ -1,5 +1,3 @@
-
-
   .list{
     min-width: 250px;
     max-width: 250px;
@@ -15,7 +13,7 @@
     overflow-y: auto;
 }
  .list .title{
-    color: #333333;
+    color: #555555;
     width: 96%;
     margin: 5px auto;
     margin-bottom: 0;
@@ -36,7 +34,7 @@
  .list .title >*{
     
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 700;
 }
 
  .list .title h3{
@@ -49,7 +47,7 @@
 }
 .list .title form{
     width: 100%;    
-    display: none;
+    display: block;
 }
 
  .list .title a{    
@@ -77,12 +75,14 @@
  .list .add-card > * {
     line-height: 25px; 
     font-size: 13px;   
-    color:#777777;
+    color:#888888;
     height: 100%;
     border-radius: 3px;
 }
 
  .list .add-card p {
+     font-weight: 100;
+     letter-spacing: 0.03rem;
     width: 88%;
     padding: 0 5px;
     cursor: pointer;
@@ -103,7 +103,7 @@
 }
 
 .list .add-card-click{
-    display: none;
+    display: block;
     position: relative;
     width: 237.5px;
     margin: 0 auto;
