--- a/src/component/MemberModal.css
+++ b/src/component/MemberModal.css
@@ -1,5 +1,5 @@
 #memberModal,#labelModal,#checklistModal,#dueDateModal,#attachmentModal,#coverModal,#moveCardModal,#copyCardModal,#shareModal{
-    display: none; 
+    display: block; 
     position: fixed; 
     z-index: 1; 
     padding-top: 0; 
@@ -22,7 +22,8 @@
   .content .close:hover{
       background-color: transparent;
   }
-  .content h3{
+  .s-modal .content h3{
+      display: block;
       padding: 5px 0;
       text-align: center;
       font-size: 16px;
@@ -40,7 +41,7 @@
   }
   .content input,.copyCard-content textarea{
       display: block;
-      width: 95%;
+      width: 95% !important;
       padding:6px 10px;
       border: 2px solid #D9DCE2;
       border-radius: 3px;
