--- a/src/component/AddList.css
+++ b/src/component/AddList.css
@@ -1,54 +1,54 @@
+.content-wrapper .add-list {
+  background-color: rgba(250, 250, 250, 0.5);
+  color: #333333;
+  min-width: 250px;
+  max-width: 250px;
+  cursor: pointer;
+  font-size: 14px;
+  margin: 0 5px;
+}
+.content-wrapper .add-list p {
+  background-color: rgba(250, 250, 250, 0.5);
+  padding: 5px;
+  padding-left: 10px;
+  line-height: 25px;
+}
 
-.content-wrapper .add-list{    
-    background-color: rgba(250, 250, 250, 0.5);
-    color: #333333;
-    min-width: 250px;
-    max-width: 250px;
-    cursor: pointer;
-    font-size: 14px;
-    margin: 0 5px;
+.content-wrapper .add-list p:hover {
+  background-color: rgba(250, 250, 250, 0.4);
 }
-.content-wrapper .add-list p{
-    background-color: rgba(250, 250, 250, 0.5);
-    padding: 5px;
-    padding-left: 10px;
-    line-height: 25px;
-}
-
-.content-wrapper .add-list p:hover{
-    background-color: rgba(250, 250, 250, 0.4);
-}
-.content-wrapper .add-list i{
-    font-size: 13px;
+.content-wrapper .add-list i {
+  font-size: 13px;
 }
 .content-wrapper .list-fill {
-    display: block;
-    width: 98%;
-    margin: 0 auto;
+  display: block;
+  width: 95%;
+  margin: 0 auto;
+  padding: 4px 0;
 }
-.content-wrapper .list-fill input{
-    padding: 5px;
-    width: 100%;
-    border: 2px solid #0079BF;
-    line-height: 20px;
-    margin-top: 3px;
+.content-wrapper .list-fill input {
+  padding: 5px;
+  width: 100%;
+  border: 2px solid #0079bf;
+  line-height: 20px;
+  margin-top: 3px;
 }
 
-.content-wrapper .list-fill button{
-    margin: 3px 0 ;
-    height: 32px;
+.content-wrapper .list-fill button {
+  margin: 3px 0;
+  height: 32px;
 }
-.content-wrapper .list-fill .add{
-    padding: 0 10px;
-    font-size: 14px;
-    line-height: 30px;
-    background-color: #5aac44;
+.content-wrapper .list-fill .add {
+  padding: 0 10px;
+  font-size: 14px;
+  line-height: 30px;
+  background-color: #5aac44;
 }
-.content-wrapper .list-fill .add:hover{
-    background-color: #61bd4f;
+.content-wrapper .list-fill .add:hover {
+  background-color: #61bd4f;
 }
-.content-wrapper .list-fill .close i{
-    font-size: 20px;
-    line-height: 35px;
-    margin-left: 10px;
+.content-wrapper .list-fill .close i {
+  font-size: 20px;
+  line-height: 35px;
+  margin-left: 10px;
 }
